[gd_scene load_steps=10 format=3 uid="uid://23482x0qvq6b"]

[ext_resource type="Shader" path="res://scripts/Map/water.gdshader" id="1_10j20"]
[ext_resource type="Script" path="res://scripts/Helper/Map_Helper.gd" id="2_1esjd"]
[ext_resource type="Script" path="res://scripts/Camera/Spectator_Camera.gd" id="4_hmt27"]

[sub_resource type="GDScript" id="GDScript_uc18a"]
script/source = "extends Node3D

var map_generator: Node

@onready var camera_manager = $Map/Camera

var player  
var tile_objects = []  

var PlayerHelper = preload(\"res://scripts/Helper/Player_Helper.gd\").new()
@onready var knight_scene = preload(\"res://scenes/Player/Model/Knight_Model.tscn\")
@onready var mage_scene = preload(\"res://scenes/Player/Instance/Mage.tscn\")

# State
var Players = []


func _ready():
	set_process_input(true)

	# Buat instance map baru
	var map = Map.new(9, 9, 8.5, -1, 4, \"Default\")

	map_generator = preload(\"res://scripts/Helper/Map_Helper.gd\").new()
	add_child(map_generator)

	await get_tree().process_frame 

	if map_generator.connect(\"tiles_ready\", Callable(self, \"_set_player_position\")):
		print(\"Sinyal tiles_ready berhasil dihubungkan!\")
	else:
		print(\"GAGAL menghubungkan sinyal tiles_ready!\")

	map_generator.create_map(map)  # Generate map

func create_player(p_id: String, p_nickname: String, p_skin: String) -> Node3D:
	var player_instance = knight_scene.instantiate()  # Buat instance player dari scene
	player_instance.init_player(p_id, p_nickname, p_skin)  # Set ID, Nickname, Skin, dll.
	add_child(player_instance)  # Tambahkan ke scene game
	return player_instance
	
	
func _set_player_position():
	if map_generator.has_method(\"get_tiles\"):
		tile_objects = map_generator.get_tiles()  
		print(\"Tiles Generated:\", tile_objects.size())  

		if tile_objects.size() > 0:
			var first_tile = tile_objects[0]  
			var first_tile_pos = first_tile.tile_coordinate + Vector3(0, 5, 0)  
			spawn_player(first_tile_pos)
		else:
			print(\"ERROR: Tidak ada tile yang tersedia!\")
	else:
		print(\"ERROR: map_generator tidak memiliki method get_tiles!\")



func spawn_player(spawn_pos: Vector3):
	var new_player = create_player(\"001\", \"IO\", \"Knight\")
	add_child(new_player)
	
	Players.append(new_player)
	new_player.set_spawn_position(spawn_pos)
	new_player.set_tile_objects(tile_objects)
	
	print(\"Player spawned:\", new_player.nickname)


func _input(event):
	if event.is_action_pressed(\"down\"):
		if camera_manager:
			camera_manager.switch_camera()
		else:
			print(\"ERROR: camera_manager belum terinisialisasi!\")
"

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_l6rss"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_kqoeu"]
sky_material = SubResource("ProceduralSkyMaterial_l6rss")

[sub_resource type="Environment" id="Environment_r60x1"]
background_mode = 2
sky = SubResource("Sky_kqoeu")
tonemap_mode = 2
volumetric_fog_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_cowbk"]
size = Vector2(150, 150)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aa0a5"]
render_priority = 0
shader = ExtResource("1_10j20")
shader_parameter/WATER_COL = Vector4(0.04, 0.38, 0.88, 1)
shader_parameter/WATER2_COL = Vector4(0.04, 0.35, 0.78, 1)
shader_parameter/FOAM_COL = Vector4(0.8125, 0.9609, 0.9648, 1)
shader_parameter/distortion_speed = 2.0
shader_parameter/tile = Vector2(5, 5)
shader_parameter/height = 2.0
shader_parameter/wave_size = Vector2(2, 2)
shader_parameter/wave_speed = 1.5

[node name="World" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 39.9095, 9.39045, 24.638)
script = SubResource("GDScript_uc18a")

[node name="Environment" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.60765, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, -33.3671, -3.15024, -2.3379)
light_volumetric_fog_energy = 0.5
light_angular_distance = 2.0
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_r60x1")

[node name="Water" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.6441, 0.817822, 21.4001)
mesh = SubResource("PlaneMesh_cowbk")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_aa0a5")

[node name="Map" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.2881, 3.46948, -7.2274)
script = ExtResource("2_1esjd")

[node name="Camera" type="Node3D" parent="Map"]
script = ExtResource("4_hmt27")

[node name="Spectator_1" type="Camera3D" parent="Map/Camera"]
transform = Transform3D(-0.75471, 0.366863, -0.543898, 0, 0.829037, 0.559193, 0.656059, 0.422028, -0.625683, 21.95, 12.37, 0.37)

[node name="Spectator_2" type="Camera3D" parent="Map/Camera"]
transform = Transform3D(0.707107, -0.454519, 0.541675, 0, 0.766044, 0.642787, -0.707107, -0.454519, 0.541675, 103.74, 15, 83.04)

[node name="Spectator_Dice" type="Camera3D" parent="Map/Camera"]
transform = Transform3D(0.707107, -0.689534, 0.156658, 0, 0.221548, 0.97515, -0.707107, -0.689534, 0.156658, 66.74, 24.42, 47.19)
